  remains fully functional.
- Bugfix to v*.SetRequest.Community initialization at pysnmp.proto
- Bugfix to ObjectIdentifier class wrapper at pysnmp.compat.pysnmpxx
- rfc1902 BITS construct implemented (as an ApplicationSyntax component
  whilst SMI defines it as one of possible Syntax values. Why it's defined
  so and what's the right implementation is still unclear to me).

Thu Jun 07 19:23:33 MSD 2003

Changes to version 3.3.4
------------------------

- Raw values access interface of asn1.base.SimpleAsn1Object reworked for
  better performance
- initialValue of asn1.base.SimpleAsn1Object class objects may now be
  defined as method
- Bugfix to asn1.base.SimpleAsn1Object value assignment -- copy mutable
  values rather then store a reference to the passed one
- The tree-making facility of asn1.univ.ObjectIdentifier class reworked
  for better performance and clearer protocol
- Bugfix initial value assignment of proto.rfc1157.RequestId & 
  proto.rfc1905.RequestId classes to get much less repetitive values
- The getTerminal() method implemented to all base ASN1 data types
  (simple & structed) for a more constent API
- Bugfix to examples/* var-bind pretty printing (IpAddress wouldn't print).
- UCD command line interface mixins now support the rest of SNMP data types
  (Gauge, Counter32 etc.)

Thu Mar 20 18:43:55 MSD 2003

Changes to version 3.3.3
------------------------

- The constraints methods set of asn1.base.Asn1Object converted to
  a set of flags accompanied by a single constraints checking
  method for better efficiency.
- The asn1.base.ChoiceTypeAsn1Object.get() method converted to
  getTerminal() to handle possible structured Choice elements
  (may cause incompatibilities!).
- ber.base.decodeTag() function substitutes functionally similar
  code scattered over a few BER decoders.
- asn1.univ.ObjectIdentifier.str2num()/num2str() methods code optimized
  for better performance.
- Bugfix to handle_error() methods of udp.asynrole.manager/agent.